bổ sung thêm các api về user
